--- a/app/src/locales/hi/global.json
+++ b/app/src/locales/hi/global.json
@@ -1,16 +1,19 @@
 {
   "todoApp": {
-    "header": "कार्य पूर्ण करें!"
+    "header": "काम पूरा करो!"
   },
   "todoForm": {
     "inputPlaceholder": "मुझे करना है...",
-    "option1": "श्रेणी",
+    "option1": "श्रेणी चुनें",
     "option2": "व्यक्तिगत",
-    "option3": "व्यवसायिक",
+    "option3": "व्यापार",
     "noCategoryMsg": "कृपया एक श्रेणी चुनें!"
   },
+  "todoEdit": {
+    "inputPlaceholder": "टू-डू अपडेट करें"
+  },
   "todoList": {
-    "mailBluePrint1": "यह मेरी कार्य सूची है:",
+    "mailBluePrint1": "यह मेरी टू-डू सूची है:",
     "mailBluePrint2": "कार्य:",
     "mailBluePrint3": "श्रेणी:",
     "mailBluePrint4": "स्थिति:",
@@ -18,12 +21,12 @@
     "clasicFilter2": "पसंदीदा",
     "dropdownFilter1Option1": "श्रेणी",
     "dropdownFilter1Option2": "व्यक्तिगत",
-    "dropdownFilter1Option3": "व्यवसायिक",
+    "dropdownFilter1Option3": "व्यापार",
     "dropdownFilter2Option1": "स्थिति",
     "dropdownFilter2Option2": "पूर्ण",
     "dropdownFilter2Option3": "अपूर्ण"
   },
   "todoFooter": {
-    "footer": "हलक ऐप्स इंटर्न द्वारा संचालित"
+    "footer": "हलक एप्स इंटरन द्वारा संचालित"
   }
 }
